...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hf8-Ff-MX7">
                                <rect key="frame" x="154" y="442" width="66" height="30"/>
                                <state key="normal" title="Enter Flat"/>
                                <connections>
                                    <action selector="enterFlatAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Aoq-Uk-ZDj"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p1h-3Q-pky">
                                <rect key="frame" x="163" y="360" width="48" height="30"/>
                                <state key="normal" title="Logout"/>
                                <connections>
                                    <action selector="logoutAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J5R-y6-7V2"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v2u-HI-aD8">
                                <rect key="frame" x="62" y="318" width="250" height="30"/>
                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DHu-zr-l5N">
                                <rect key="frame" x="62" y="374" width="250" height="30"/>
                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invalid username/password." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2JY-Rv-NAF">
                                <rect key="frame" x="80.5" y="277" width="213" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Need to sign up?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94V-0z-7f9">
                                <rect key="frame" x="122" y="168" width="130" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mmt-63-ZW3">
                                <rect key="frame" x="169" y="478" width="38" height="30"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginAction:" destination="nKT-Hl-Ibj" eventType="touchUpInside" id="4G4-7J-sbL"/>
...
                                </connections>
                            </button>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invalid password." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aT2-et-gWj">
                                <rect key="frame" x="121" y="115" width="133" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CmA-WS-kOe">
                                <rect key="frame" x="133" y="194" width="109" height="30"/>
                                <state key="normal" title="Submit Request"/>
                                <connections>
                                    <segue destination="6g6-Ku-E7s" kind="presentation" identifier="segueGuestToSubmitRequest" id="2wm-YW-odr"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yJH-2U-5BS">
                                <rect key="frame" x="159" y="386" width="57" height="30"/>
                                <state key="normal" title="Sign out"/>
                                <connections>
                                    <action selector="signOutAction:" destination="pOj-fO-wtV" eventType="touchUpInside" id="64f-qb-9gW"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4BB-Xo-3dn">
                                <rect key="frame" x="133" y="249" width="109" height="30"/>
                                <state key="normal" title="Matches"/>
                                <connections>
                                    <segue destination="5vD-gD-bnu" kind="presentation" id="Dss-6T-XLK"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Check-in Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nnk-2G-e2U">
                                <rect key="frame" x="38" y="216" width="299" height="30"/>
                                <nil key="textColor"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
